syntax = "proto3";

package kyfk.todo.server.v1;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "buf/validate/validate.proto";
import "todo-list/server/v1/model.proto";

option go_package = "github.com/kyfk/golang-todo-list-sample/server/interface/todo/v1";

service Todo {
  rpc Index(IndexRequest) returns (IndexResponse) {
    option (google.api.http) = {get: "/v1/todos"};
	}

  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {get: "/v1/todo/{id}"};
	}

  rpc Update(UpdateRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/v1/todos"
      body: "*"
    };
	}

  rpc Create(CreateRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/todos"
      body: "*"
    };
	}

  rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/todos/{id}"
    };
	}
}

message IndexRequest {
  int32 offset = 1 [(buf.validate.field).uint32 = {gte: 0, lte: 2147483647}];
  int32 limit = 2 [(buf.validate.field).uint32 = {gte: 0, lte: 2147483647}];
}

message IndexResponse {
  repeated kyfk.todo.model.v1.Todo todos = 1;
}

message GetRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message GetResponse {
  kyfk.todo.model.v1.Todo todo = 1;
}

message UpdateRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string title = 2 [(buf.validate.field).string = {
    min_len: 1,
    max_len: 50
  }];
  string desc = 3 [(buf.validate.field).string = {
    min_len: 1,
    max_len: 300
  }];
}

message UpdateResponse {
  kyfk.todo.model.v1.Todo todo = 1;
}

message CreateRequest {
  string title = 1 [(buf.validate.field).string = {
    min_len: 1,
    max_len: 50
  }];
  string desc = 2 [(buf.validate.field).string = {
    min_len: 1,
    max_len: 300
  }];
}

message CreateResponse {
  kyfk.todo.model.v1.Todo todo = 1;
}

message DeleteRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}
